infrastructure/k8s/overlays/prod/dashboard-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 2
