infrastructure/k8s/overlays/prod/service-nginx-patch.yaml
# This file is a reference for production LoadBalancer setup if nginx is run as a service
# For standard nginx ingress controller, this is optional but recommended for stability
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  externalTrafficPolicy: Local
